# cairo-rs-py

./: Cargo.toml  test.py
cairo_programs/: .compile.sh.swp  array_sum.cairo  assert_not_zero.cairo  compile.sh  migrate.sh
runner_test/: Cargo.toml  Makefile  setup.sh
runner_test/src/: main.rs
src/: cairo_runner.rs  vm_core.rs
