[package]
name = "cairo-rs-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "cairo_rs_py"
crate-type = ["dylib"]

[features]
extension = ["pyo3/num-bigint", "pyo3/extension-module"]
default = ["pyo3/num-bigint", "pyo3/auto-initialize"]

[dependencies]
pyo3 = { version = "0.16.5" }
cairo-rs = { git="https://github.com/FuzzingLabs/cairo-rs/", rev="d938ffb4a36e3e266bb51955d4a76cdae38e44c2"}
num-bigint = "0.4"
lazy_static = "1.4.0"

[dev-dependencies.rusty-hook]
version = "0.11"
