[package]
name = "cairo-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { git  = "https://github.com/FuzzingLabs/cairo-rs" }
serde_json = "1.0"
num-bigint = { version = "0.4", features = ["serde"] }
cairo-rs-py = {git = "https://github.com/FuzzingLabs/cairo-rs-py"}
pyo3 = { version = "0.16.5" }


[features]
extension = ["pyo3/num-bigint", "pyo3/extension-module"]
default = ["pyo3/num-bigint", "pyo3/auto-initialize"]
